@@ -1,5 +1,56 @@
 ChangelogURI: http://changelogs.ubuntu.com/changelogs/pool/%s/%s/%s/%s_%s/changelog
 
+Suite: feisty
+RepositoryType: deb
+BaseURI: http://archive.ubuntu.com/ubuntu/
+MatchURI: archive.ubuntu.com/ubuntu
+MirrorsFile: /usr/share/update-manager/mirrors.cfg
+Description: Ubuntu 7.04 'Feisty Fawn'
+Component: main
+CompDescription: Officially supported
+CompDescriptionLong: Canonical supported Open Source software
+Component: universe
+CompDescription: Community maintained
+CompDescriptionLong: Community maintained Open Source software
+Component: restricted
+CompDescription: Non-free drivers
+CompDescriptionLong: Proprietary drivers for devices
+Component: multiverse
+CompDescription: Restricted software
+CompDescriptionLong: Software restricted by copyright or legal issues
+
+Suite: feisty
+MatchName: .*
+BaseURI: cdrom:\[Ubuntu.*7.04
+Description: Cdrom with Ubuntu 7.04 'Feisty Fawn'
+Available: False
+Component: main
+CompDescription: Officially supported
+Component: restricted
+CompDescription: Restricted copyright
+
+Suite: feisty-security
+ParentSuite: feisty
+RepositoryType: deb
+BaseURI: http://security.ubuntu.com/ubuntu/
+MatchURI: archive.ubuntu.com/ubuntu|security.ubuntu.com
+Description: Important security updates
+
+Suite: feisty-updates
+ParentSuite: feisty
+RepositoryType: deb
+Description: Recommended updates
+
+Suite: feisty-proposed
+ParentSuite: feisty
+RepositoryType: deb
+Description: Proposed updates
+
+Suite: feisty-backports
+ParentSuite: feisty
+RepositoryType: deb
+Description: Backported updates
+
 Suite: edgy
 RepositoryType: deb
 BaseURI: http://archive.ubuntu.com/ubuntu/
