@@ -1,3 +1,6 @@
+2006-12-12:
+	- rewrote the _checkFreeSpace() and add better checking 
+          for /boot (#70683)
 2006-11-28:
 	- add quirks rule to install ndiswrapper-utils-1.9 if 1.8 is 
           installed
